Remove java flags for CMS java garbage collector (#1427)
* Concurrent Mark Sweep (CMS) garbage collector is deprecated in Java
  9 and later, and will likely be removed in a future version
* This change removes the explicit use of a specific java garbage
  collector, instead relying on users to configure their own in their
  environment, as appropriate for their circumstances
* If users do not set their JVM garbage collector explicitly, then we
  shouldn't override default Java behavior with our own preferred
  default, which may be worse than Java's defaults